--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kennith Crasta | Corporate Finance Portfolio</title>
+    <!-- NEW: Specify the canonical URL for SEO (Search Engine Optimization) -->
+    <link rel="canonical" href="https://kennithcrasta.com/">
     <!-- Load Tailwind CSS via CDN for rapid development and single-file portability -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -46,7 +48,8 @@
     <nav class="sticky top-0 z-50 bg-[#161625] bg-opacity-95 backdrop-blur-sm shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <a href="#hero" class="text-2xl font-extrabold primary-color tracking-wider">
+                <!-- Changed 'a href' to point to the official domain -->
+                <a href="https://kennithcrasta.com/" class="text-2xl font-extrabold primary-color tracking-wider">
                     K C R A S T A
                 </a>
                 <div class="flex space-x-4">
@@ -239,7 +242,8 @@
 
     <!-- FOOTER -->
     <footer class="mt-10 py-6 text-center text-gray-500 border-t border-gray-800">
-        <p>© 2025 Kennith Crasta. All rights reserved. Built with clean, modern HTML/CSS.</p>
+        <!-- Updated footer to reflect the official domain -->
+        <p>© 2025 Kennith Crasta. All rights reserved. <a href="https://kennithcrasta.com/" class="hover:text-primary-color transition duration-200">kennithcrasta.com</a></p>
     </footer>
 
 </body>
